Fixing z-index issue with grant/commission artists h2s

--- a/web/app/themes/envisioningjustice/assets/styles/pages/_grants-commissions.scss
+++ b/web/app/themes/envisioningjustice/assets/styles/pages/_grants-commissions.scss
@@ -26,6 +26,10 @@
       background-size: cover;
       background-position: top center;
     }
+    h2 {
+      z-index: 1;
+      position: relative;
+    }
     a {
       color: $yellow;
     }
